# codex_launcher

./: .gitignore  README.md  start-launcher.sh  test_graph.py
.codex-assets/: asset_inventory.json
scaffolds/free_agent_scaffold/: .gitignore  README.md  pyproject.toml
scaffolds/free_agent_scaffold/configs/: default.yaml  ui_presets.json
scaffolds/free_agent_scaffold/src/free_agent/: __init__.py  __main__.py  main.py  models.py
scaffolds/free_agent_scaffold/src/free_agent/cli/: app.py
scaffolds/free_agent_scaffold/tests/: test_engine.py  test_memory.py  test_patcher.py  test_symbols.py
vendors/freeagent_ultra/: .env.freeagent  .env.freeagent.example  README.md  START_FREEAGENT.py  freeagent_console.bat  freeagent_console.py  pyproject.toml  run_freeagent.bat  run_freeagent_wsl.bat  run_freeagent_wsl.sh
vendors/freeagent_ultra/freeagent/: bootstrap.py  cli.py  models.py  orchestrator.py  patch_engine.py  provider_manager.py  session.py
vendors/freeagent_ultra/freeagent/graph/: builder.py  state.py
vendors/freeagent_ultra/freeagent/providers/: minimax_provider.py  mock_provider.py  ollama_provider.py  openai_compatible.py
vendors/freeagent_ultra/freeagent/tools/: approval.py  asset_tools.py  file_tools.py  git_tools.py  shell_tools.py
vendors/freeagent_ultra/freeagent/utils/: project_scan.py
vendors/freeagent_ultra/freeagent_ultra.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
vendors/freeagent_ultra/scripts/: setup_unix.sh  setup_windows.ps1
vendors/freeagent_ultra/tests/: test_ask.py  test_asset_graph.py  test_cli_graph.py  test_cli_prompt.py  test_doctor.py  test_explain.py  test_graph_runtime.py  test_inspect_tools.py  test_orchestrator_apply.py  test_orchestrator_no_targets.py  test_orchestrator_retry_summary.py  test_patch_engine.py  test_provider_fallback.py  test_scan.py
(+61 files in other folders)
