[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freeagent-ultra"
version = "0.4.0"
description = "Local coding agent CLI with plan-approve-apply-verify loop"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pydantic>=2.8.2",
  "requests>=2.32.3",
  "langgraph>=1.1.6",
  "langchain>=0.2.0",
  "langchain-community>=0.2.0",
  "qdrant-client>=1.9.0",
  "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
]

[project.scripts]
freeagent = "freeagent.cli:app"

[tool.setuptools.packages.find]
include = ["freeagent*"]
